--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>YURTIK</title>
+    <title>Yurtik</title>
   </head>
   <body>
     <div id="root"></div>
